src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Dealer_Complaint_Gate_Keeper__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealer Complaint Gate Keeper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Complaint_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealer Complaint Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Presales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealer Presales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Sales_Gate_Keeper__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealer Sales Gate Keeper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_English__c</fullName>
        <label>Name (English)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
</CustomObject>